# herald

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
code-review/: 2026-04-05-codex-adversarial-review.md  2026-04-05-independent-review.md
docs/: design-approaches.md  problem-statement.md  spec.md
issues/: 2026-04-06-session-history-export.md
scripts/: herald-hook.py  herald-hook.sh
src/: app.rs  config.rs  main.rs  worktree.rs
src/events/: hook_listener.rs  mod.rs  queue.rs  status_mapper.rs  types.rs
src/input/: batcher.rs  mod.rs  tmux_keys.rs
src/provider/: claude_code.rs  mod.rs  registry.rs
src/session/: manager.rs  mod.rs  model.rs  state_machine.rs  terminal.rs
src/snapshots/: herald__app__tests__app_dialog_overlay.snap  herald__app__tests__app_initial_render.snap  herald__app__tests__app_with_sessions.snap
src/tmux/: commands.rs  control.rs  mod.rs
src/tui/: dialogs.rs  layout.rs  main_area.rs  mod.rs  sidebar.rs  status_bar.rs  test_helpers.rs
src/tui/snapshots/: herald__tui__dialogs__tests__dialog_default_state.snap  herald__tui__dialogs__tests__dialog_long_prompt_does_not_overflow.snap  herald__tui__dialogs__tests__dialog_with_input.snap  herald__tui__main_area__tests__main_area_empty_large.snap  herald__tui__main_area__tests__main_area_empty_small.snap  herald__tui__main_area__tests__main_area_scroll_indicator.snap  herald__tui__main_area__tests__main_area_with_plain_text.snap  herald__tui__sidebar__tests__sidebar_empty.snap  herald__tui__sidebar__tests__sidebar_multiple_statuses.snap  (+6 more)
