[package]
name = "herald"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
vte = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2.184"
chrono = "0.4.44"
ansi-to-tui = "8.0.1"

[dev-dependencies]
tempfile = "3.27.0"
